# chat-to-api

./: .env  .gitignore  README.md  api.py  build.py  cats_funcs.py  cats_handlers.yaml  config.py  config.yaml  consumer.py  db_utils.py  incremental_training.py  initdb.py  insight.py  main.py  models.py  pyproject.toml  training.py
_archived/: insight.db  models.py  training.py
api/: routes.py
app/: main.py
app/api/: endpoints.py
app/config/: settings.py
app/models/: schemas.py
app/services/: gpt_labeler.py  handler_caller.py  llama_index.py  model_trainer.py  text_processor.py
app/utils/: db.py  ocr.py  rabbitmq.py
config/: settings.py
documents/: rules.txt
handlers/: input_handler.py
services/: gpt_processor.py  llama_index.py
ui/: app.py
ui/pages/: data_view.py  document_manager.py  text_input.py
