[tool.poetry]
name = "chat-to-api"
version = "0.1.0"
description = ""
authors = ["Frederic <zetachow@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"
spacy = "3.7.6"
flask = "^3.0.3"
langdetect = "^1.0.9"
pyyaml = "^6.0.2"
spacy-lookups-data = "^1.0.5"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
pydantic = "^2.9.1"
sqlalchemy = "^2.0.34"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
streamlit = "^1.38.0"
llama-index = "^0.11.9"
openai = "^1.45.0"
pytesseract = "^0.3.13"
pillow = "^10.4.0"
requests = "^2.32.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
