[tool.poetry]
name = "chat-to-api"
version = "0.1.0"
description = ""
authors = ["Frederic <zetachow@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
spacy = "3.7.6"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
